--- a/app/index.html
+++ b/app/index.html
@@ -234,6 +234,7 @@
     <h1><span data-l10n-id="presentations">Präsentationen</h1>
       <ul>
     <ul>
+      <li><a href="../presentations/mozillaCH_intro_mozilla/index.html">Mozilla Intro &amp; Update</a>, Mozilla Switzerland at TechUP, Luzern, 13.04.2016</li>
       <li><a href="https://docs.google.com/presentation/d/1J6vTfZYunNT9nbvzmGkz0kq_p5m2HL8DDOb1Dg6wO3M">Connected Devices and Smart Home</a>, Mozilla Switzerland at techmeetings.ch, Fribourg, 31.03.2016</li>
       <li><a href="https://docs.google.com/presentation/d/1y9E_KJ0v5P3LYoklqC1Gbt-drGXRJyu2bX9J6kD1lDY">Firefox OS and Connected Devices</a>, Mozilla Switzerland, Zürich, 09.02.2016</li>
       <li><a href="https://docs.google.com/presentation/d/1T8PbAqkCepClJz3OkTpKkrs01TVCTYW1K1hzT0ImC6s/edit?usp=sharing">Firefox OS and Connected Devices</a>, Mozilla Switzerland, Fribourg, 01.02.2016 (not delivered :()</li>
