--- a/app/index.html
+++ b/app/index.html
@@ -232,8 +232,8 @@
 
 <section id="presentations" class="chapter">
     <h1><span data-l10n-id="presentations">Präsentationen</h1>
-      <ul>
     <ul>
+      <li><a href="https://docs.google.com/presentation/d/11euVpPoJ7kKO1OcWTYCqA3XOmUC_DAoGi1rJEeQtOS8/edit">Firefox Hackathon</a>, Mozilla Switzerland, 30.04.2016</li>
       <li><a href="https://docs.google.com/presentation/d/1yPy7oLr1u9RyyaF-CS7Yf3gDX873bJI82LgLIZPisnQ/edit">FFHS Raspberry Pi Projektpräsentation (German)</a>, 14.04.2016</li>
       <li><a href="../presentations/mozillaCH_intro_mozilla/index.html">Mozilla Intro &amp; Update</a>, Mozilla Switzerland at TechUP, Luzern, 13.04.2016</li>
       <li><a href="https://docs.google.com/presentation/d/1J6vTfZYunNT9nbvzmGkz0kq_p5m2HL8DDOb1Dg6wO3M">Connected Devices and Smart Home</a>, Mozilla Switzerland at techmeetings.ch, Fribourg, 31.03.2016</li>
@@ -246,30 +246,30 @@
       <li><a href="../presentations/mozweekend-berlin-2015-new-in-firefox/index.html">Mozilla Weekend Berlin 2015 - What's new in Firefox?</a>, German-speaking Mozilla Community, Berlin, 11.07.2015</li>
       <li><a href="../presentations/mozweekend-berlin-2015-outro/index.html">Mozilla Weekend Berlin 2015 - Outro Day 1</a>, German-speaking Mozilla Community, Berlin, Germany, 11.07.2015</li>
       <li><a href="../presentations/mozweekend-berlin-2015-intro/index.html">Mozilla Weekend Berlin 2015 - Intro</a>, German-speaking Mozilla Community, Berlin, Germany, 11.07.2015</li>
-        <li><a href="../presentations/mozillaCH-how-mozilla-protect-web/index.html">How does Mozilla protect the open web?</a>, Mozilla Switzerland, Bern, Switzerland, 08.06.2015</li>
-        <li><a href="../presentations/mozillaCH-why-should-you-use-firefox/index.html">Why should you use Firefox?</a>, Mozilla Switzerland, Zürich, Switzerland, 03.06.2015</li>
-        <li><a href="../presentations/oscal-community-building/index.html">Communities are easy to build but hard to maintain</a>, OSCAL 2015, Tirana, Albania, 10.05.2015</li>
-        <li><a href="../presentations/oscal-firefoxos-hacking/index.html">Creating Firefox OS Apps and hacking Firefox OS itself!</a>, OSCAL 2015, Tirana, Albania, 09.05.2015</li>
-        <li><a href="../presentations/mozilla-mobilecamp-dresden-2015-hacking/index.html">Firefox OS - Creating your own app and hack Firefox OS itself</a>, MobileCamp Dresden 2015, Dresden, 25.04.2015</li>
-        <li><a href="../presentations/mozilla-mobilecamp-dresden-2015/index.html">Firefox OS - still advancing</a>, MobileCamp Dresden 2015, Dresden, 25.04.2015</li>
-        <li><a href="../presentations/mozillach-combining-firefox-os-webmaker/index.html">Combining Firefox OS and Webmaker</a>, MozillaCH, Zürich, 26.03.2015</li>
-        <li><a href="http://slides.com/michaelkohler/hacking-on-gaia#/">Hacking on Gaia</a>, FOSS Asia, 15.03.2015</li>
-        <li><a href="../presentations/fossasia-combining-firefox-os-webmaker/index.html">Combining Firefox OS and Webmaker</a>, FOSS Asia, 14.03.2015</li>
-        <li><a href="../presentations/mozilla-switzerland/index.html">Some information about Mozilla Switzerland</a>, Mozilla Berlin, 20.02.2015</li>
-        <li><a href="../presentations/firefoxosappday-frankfurt/index.html">Firefox OS App Day Frankfurt</a>, Frankfurt, 22.11.2014</li>
-        <li><a href="../presentations/fx10-zurich/index.html">10 years of Firefox</a>, Zurich, 17.11.2014</li>
-        <li><a href="../presentations/hacking-day-berlin-okt-2014/index.html">Introduction - Mozilla Hacking Day Berlin</a>, Berlin, 11.10.2014</li>
-        <li><a href="../presentations/hacking-day-berlin-okt-2014-closing/index.html">Closing - Mozilla Hacking Day Berlin</a>, Berlin, 11.10.2014</li>
-        <li><a href="../presentations/ffos-introduction-to-firefoxos-dev/index.html">TechUP July 2014 - Introduction to Firefox OS Development</a>, TechUP Luzern, 02.07.2014</li>
-        <li><a href="../presentations/new-in-firefoxos-appday2014/index.html">App Day 2014 - New in Firefox OS</a>, Mozilla Firefox OS App Day Zurich, 14.06.2014</li>
-        <li><a href="../presentations/ffos-appday2014-switzerland-mozch/index.html">Mozilla CH / App Day Intro</a>, Mozilla Firefox OS App Day Zurich, 14.06.2014</li>
-        <li><a href="../presentations/mobilecamp-dresden-2014/index.html">Firefox OS - Introduction</a>, MobileCamp Dresden 2014, 10.05.2014</li>
-        <li><a href="../presentations/ffos-appday-duesseldorf/index.html">History of Firefox OS</a>, Firefox OS App Day Düsseldorf, net-m, 15.11.2013</li>
-        <li><a href="../presentations/ffos-appday-duesseldorf-coding/index.html">Creating a Firefox OS App - Live coding</a>, Firefox OS App Day Düsseldorf, net-m, 15.11.2013</li>
-        <li><a href="../presentations/cern-webfest/Webfest.html">CERN Webfest - Mozilla Webmaker</a>, CERN, 02.08.2013</li>
-        <li><a href="../presentations/ffos-appday-switzerland/FFOSAppDay.html">Firefox OS App Day Zurich - Event</a>, Schlieren ZH, 25.05.2013</li>
-        <li><a href="../presentations/ffos-appday-switzerland-mozch/MozillaCH.html">Firefox OS App Day Zurich - MozillaCH</a>, Schlieren ZH, 25.05.2013</li>
-        <li><a href="../presentations/mozilla_weekend_of_code_2012.html">Firefox Source Code 101</a>, Mozilla Weekend of Code 2012, Schlieren ZH</li>
+      <li><a href="../presentations/mozillaCH-how-mozilla-protect-web/index.html">How does Mozilla protect the open web?</a>, Mozilla Switzerland, Bern, Switzerland, 08.06.2015</li>
+      <li><a href="../presentations/mozillaCH-why-should-you-use-firefox/index.html">Why should you use Firefox?</a>, Mozilla Switzerland, Zürich, Switzerland, 03.06.2015</li>
+      <li><a href="../presentations/oscal-community-building/index.html">Communities are easy to build but hard to maintain</a>, OSCAL 2015, Tirana, Albania, 10.05.2015</li>
+      <li><a href="../presentations/oscal-firefoxos-hacking/index.html">Creating Firefox OS Apps and hacking Firefox OS itself!</a>, OSCAL 2015, Tirana, Albania, 09.05.2015</li>
+      <li><a href="../presentations/mozilla-mobilecamp-dresden-2015-hacking/index.html">Firefox OS - Creating your own app and hack Firefox OS itself</a>, MobileCamp Dresden 2015, Dresden, 25.04.2015</li>
+      <li><a href="../presentations/mozilla-mobilecamp-dresden-2015/index.html">Firefox OS - still advancing</a>, MobileCamp Dresden 2015, Dresden, 25.04.2015</li>
+      <li><a href="../presentations/mozillach-combining-firefox-os-webmaker/index.html">Combining Firefox OS and Webmaker</a>, MozillaCH, Zürich, 26.03.2015</li>
+      <li><a href="http://slides.com/michaelkohler/hacking-on-gaia#/">Hacking on Gaia</a>, FOSS Asia, 15.03.2015</li>
+      <li><a href="../presentations/fossasia-combining-firefox-os-webmaker/index.html">Combining Firefox OS and Webmaker</a>, FOSS Asia, 14.03.2015</li>
+      <li><a href="../presentations/mozilla-switzerland/index.html">Some information about Mozilla Switzerland</a>, Mozilla Berlin, 20.02.2015</li>
+      <li><a href="../presentations/firefoxosappday-frankfurt/index.html">Firefox OS App Day Frankfurt</a>, Frankfurt, 22.11.2014</li>
+      <li><a href="../presentations/fx10-zurich/index.html">10 years of Firefox</a>, Zurich, 17.11.2014</li>
+      <li><a href="../presentations/hacking-day-berlin-okt-2014/index.html">Introduction - Mozilla Hacking Day Berlin</a>, Berlin, 11.10.2014</li>
+      <li><a href="../presentations/hacking-day-berlin-okt-2014-closing/index.html">Closing - Mozilla Hacking Day Berlin</a>, Berlin, 11.10.2014</li>
+      <li><a href="../presentations/ffos-introduction-to-firefoxos-dev/index.html">TechUP July 2014 - Introduction to Firefox OS Development</a>, TechUP Luzern, 02.07.2014</li>
+      <li><a href="../presentations/new-in-firefoxos-appday2014/index.html">App Day 2014 - New in Firefox OS</a>, Mozilla Firefox OS App Day Zurich, 14.06.2014</li>
+      <li><a href="../presentations/ffos-appday2014-switzerland-mozch/index.html">Mozilla CH / App Day Intro</a>, Mozilla Firefox OS App Day Zurich, 14.06.2014</li>
+      <li><a href="../presentations/mobilecamp-dresden-2014/index.html">Firefox OS - Introduction</a>, MobileCamp Dresden 2014, 10.05.2014</li>
+      <li><a href="../presentations/ffos-appday-duesseldorf/index.html">History of Firefox OS</a>, Firefox OS App Day Düsseldorf, net-m, 15.11.2013</li>
+      <li><a href="../presentations/ffos-appday-duesseldorf-coding/index.html">Creating a Firefox OS App - Live coding</a>, Firefox OS App Day Düsseldorf, net-m, 15.11.2013</li>
+      <li><a href="../presentations/cern-webfest/Webfest.html">CERN Webfest - Mozilla Webmaker</a>, CERN, 02.08.2013</li>
+      <li><a href="../presentations/ffos-appday-switzerland/FFOSAppDay.html">Firefox OS App Day Zurich - Event</a>, Schlieren ZH, 25.05.2013</li>
+      <li><a href="../presentations/ffos-appday-switzerland-mozch/MozillaCH.html">Firefox OS App Day Zurich - MozillaCH</a>, Schlieren ZH, 25.05.2013</li>
+      <li><a href="../presentations/mozilla_weekend_of_code_2012.html">Firefox Source Code 101</a>, Mozilla Weekend of Code 2012, Schlieren ZH</li>
     </ul>
 </section>
 
